crates/biome_cli/tests/snapshots/main_commands_check/fs_error_dereferenced_symlink.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check '<TEMP_DIR>/check_rome_test_broken_symlink'
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - <TEMP_DIR>/check_rome_test_broken_symlink
  


```

# Emitted Messages

```block
broken_symlink internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Dereferenced symlink.
  
  i Biome encountered a file system entry that is a broken symbolic link.
  

```

```block
Checked 0 files in <TIME>. No fixes applied.
Found 1 warning.
```
