crates/biome_cli/tests/snapshots/main_commands_check/fs_error_dereferenced_symlink_unix.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
<TEMP_DIR>/rome_test_broken_symlink/broken_symlink internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Dereferenced symlink
  
  i Rome encountered a file system entry that is a broken symbolic link: <TEMP_DIR>/rome_test_broken_symlink/broken_symlink
  

```

```block
Checked 0 file(s) in <TIME>
```


