crates/biome_cli/tests/snapshots/main_commands_check/fs_files_ignore_symlink.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --config-path '<TEMP_DIR>/check_rome_test_files_ignore_symlink' --write --unsafe '<TEMP_DIR>/check_rome_test_files_ignore_symlink/src'
```

# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 2 files.
```
